--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
+<head>
+<title>
+Anya is a cat
+</title>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Hello from Anya!</h1>
+<p>I'm a cute cat.</p>
 </body>
 </html>
