--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@ Anya is a cat
 <body>
 <h1>Hello from Anya!</h1>
 <p>I'm a cute little cat.</p>
+<img src="2022-10-20 19.00.46.png" alt="Cute cat" width="600" height="500"/>
 </body>
 </html>
