--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@ Anya is a cat
 <body>
 <h1>Hello from Anya!</h1>
 <p>I'm a cute little cat.</p>
+<p>
 <img src="2022-10-20 19.00.46.png" alt="Cute cat" width="200" height="180"/>
+</p>
+<p>
+<a href="https://www.youtube.com/@anyaisacat" target="_BLANK_">Min Youtube-kanal</a>
+</p>
 </body>
 </html>
