--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>
 Anya is a cat
 </title>
-<link rel=”manifest” href=”/appmanifest.webmanifest”>
+<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 </head>
 <body>
 <h1>Hello from Anya!</h1>
