--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ Anya is a cat
 </p>
 <p>
 <h2>
-<a href="https://www.youtube.com/@anyaisacat" target="_BLANK_">Min Youtube-kanal</a>
+<a href="https://www.youtube.com/@anyaisacat" target="_BLANK_">My Youtube-channel</a>
 </h2>
 </p>
 </body>
