--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>
 Anya is a cat
 </title>
-<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+<link rel="manifest" href="%PUBLIC_URL%/appmanifest.webmanifest" />
 </head>
 <body>
 <h1>Hello from Anya!</h1>
@@ -17,5 +17,28 @@ Anya is a cat
 <a href="https://www.youtube.com/@anyaisacat" target="_BLANK_">My Youtube-channel</a>
 </h2>
 </p>
+<script>
+    // This is the service worker with the Cache-first network
+
+    // Add this below content to your HTML page, or add the js file to your page at the very top to register service worker
+
+    // Check compatibility for the browser we're running this in
+    if ("serviceWorker" in navigator) {
+    if (navigator.serviceWorker.controller) {
+        console.log("[PWA Builder] active service worker found, no need to register");
+    } else {
+        // Register the service worker
+        navigator.serviceWorker
+        .register("pwabuilder-sw.js", {
+            scope: "./"
+        })
+        .then(function (reg) {
+            console.log("[PWA Builder] Service worker has been registered for scope: " + reg.scope);
+        });
+    }
+    }
+
+</script>
+
 </body>
 </html>
