--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title>
 Anya is a cat
 </title>
+<link rel="icon" type="image/png" href="https://anyaisacat.github.io/AnyaIsACatIcon.png">
 <link rel="manifest" href="/appmanifest.webmanifest" />
 </head>
 <body>
