--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ Anya is a cat
 </p>
 <p>
 <h2>
-<a href="https://www.youtube.com/@anyaisacat" target="_BLANK_">My Youtube-channel</a>
+<a href="https://www.youtube.com/@anyaisacat" target="_BLANK_"><img src="YouTube_icon.png" alt="YouTube link" width="50" height="40"/></a>
 </h2>
 </p>
 <script>
