--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@ Anya is a cat
 <link rel="manifest" href="/appmanifest.webmanifest" />
 </head>
 <body onload="initCube()">
-    <div id="cube" texts="AnyaIsACat;Ragdoll;"
-     images="AnyaIsACatIcon.png;AnyaIsAPortrait.png;Youtube_icon.png" 
+    <a href="https://www.youtube.com/@anyaisacat" target="_BLANK_"><img src="YouTube_icon.png" alt="YouTube link" width="50" height="40"/>
+    <div id="cube" texts="AnyaIsACat;Ragdoll"
+     images="AnyaIsACat1.png;AnyaIsACat2.png;AnyaIsAPortrait.png;Youtube_icon.png" 
      style="
         background-image: url('underthetable.png');
          height : 1024px; 
@@ -20,6 +21,7 @@ Anya is a cat
          background-attachment: fixed;
         background-color: #cccccc;
    "></div>
+   </a>
 </body>
 <script src="/three.min.js"></script>
 <script src="/3dcube.js"></script>
