--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ Anya is a cat
 <link rel="manifest" href="/appmanifest.webmanifest" />
 </head>
 <body onload="initCube()">
-    <a href="https://www.youtube.com/@anyaisacat" target="_BLANK_"><img src="YouTube_icon.png" alt="YouTube link" width="50" height="40"/>
+    <a href="https://www.youtube.com/@anyaisacat" target="_BLANK_">
     <div id="cube" texts="AnyaIsACat;Ragdoll"
      images="AnyaIsACat1.png;AnyaIsACat2.png;AnyaIsAPortrait.png;Youtube_icon.png" 
      style="
