--- a/anya/index.html
+++ b/anya/index.html
@@ -6,7 +6,7 @@
 	</head>
 	<body onload="initCube()">
 		<div id="cube" texts="AnyaIsACat;Ragdoll;"
-		 images="AnyaIsACatIcon.png;AnyaIsAPortrait.png;Youtube_icon.png" 
+		 images="AnyaIsACatIcon.png;AnyaIsAPortrait.png;YouTube_icon.png" 
 		 style="
 			background-image: url('underthetable.png');
 		 	height : 1024px; 
