--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ Anya is a cat
 <body onload="initCube()">
     <a href="https://www.youtube.com/@anyaisacat" target="_BLANK_">
     <div id="cube" texts="AnyaIsACat;Ragdoll"
-     images="AnyaIsACat1.png;AnyaIsACat2.png;AnyaIsAPortrait.png;Youtube_icon.png" 
+     images="AnyaIsACat1.png;AnyaIsACat2.png;AnyaIsAPortrait.png;YouTube_icon.png" 
      style="
         background-image: url('underthetable.png');
          height : 512px; 
