--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@ Anya is a cat
    </div>
    </a>
    <textarea id="aiprompt" name="aiprompt" rows="4" cols="80"></textarea>
-   <input type="button" onclick="getAI(aiprompt.value)" value="Send to AI"/>
+   <input type="button" onclick="getAI(aiprompt.value)" value="Send to OpenAI"/>
+   <input type="button" onclick="getDS(aiprompt.value)" value="Send to DeepSeek"/>
    <p id="airesponse" style="font-size: 20px; text-align:center"></p>
 </body>
 
