--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@ Anya is a cat
 <script src="/three.min.js"></script>
 <script src="/3dcube.js"></script>
 <script src="/openai.js"></script>
+<script src="/deepseek.js"></script>
 <script>
     // Check compatibility for the browser we're running this in
     if ("serviceWorker" in navigator) {
